# wheather_bot

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  requirements.txt
fastapi/: Dockerfile  config.py  database.py  docker-compose.yml  main.py  pyproject.toml
fastapi/auth/: router.py
fastapi/logs/: models.py  router.py  schemas.py  utils.py
fastapi/migrations/: env.py
fastapi/post_router/: router.py  utils.py
fastapi/repository/: exceptions.py  repository.py  utils.py
fastapi/tests/: test_2.py  test_weather.py
migraions/: env.py
src/: .env_dev  Dockerfile  config.py  database.py  docker-compose.yml  main.py
src/auth/: models.py  router.py  schemas.py
src/logs/: models.py  router.py  utils.py
src/post_router/: router.py  utils.py
src/repository/: repository.py  utils.py
src/tests/: test.py
