[tool.poetry]
name = "weather-bot"
version = "0.1.0"
description = ""
authors = ["Michail S <mixan_45@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.3"
betterlogging = "^1.0.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.1"
fastapi = "^0.115.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
